<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="26sp"
            android:id="@+id/title"
            android:layout_centerVertical="true"
            android:layout_marginStart="22dp"
            android:text="@string/find_events_and_schedule_planning"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/quotes"
            android:layout_below="@id/title"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="22dp"
            android:text="@string/main_description"/>

    <Button
        android:id="@+id/SignIn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_round_arrow_forward_24"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:id="@+id/one"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/linear"
            android:text="@string/by_continuing_you_agree_the_simply_s"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:id="@+id/tos"
            android:text="@string/term_of_service"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/and"
            android:layout_marginBottom="10dp"
            android:text="  and  "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/pos"
            android:text="@string/privacy_policy"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>